packages/typ/tests/fixtures/diagnostics/0162_adt_constructor_bool_arg_mismatch_04.ml.expected
File "0162_adt_constructor_bool_arg_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0162_adt_constructor_bool_arg_mismatch_04 is not a valid module name.

File "0162_adt_constructor_bool_arg_mismatch_04.ml", line 2, characters 14-15:
2 | let _ = Right 3
                  ^
Error: The constant 3 has type int but an expression was expected of type
         bool
